--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,36 +1,10 @@
 * { margin:0px; padding:0px; }
 
 #container {
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 300px;
-	background-color: SkyBlue;
-}
-
-#info {
-	width: 100%;
-}
-
-#info TD {
-	border: 1px solid Grey;
-	padding: 5px;
-	text-align: center;
-	vertical-align: middle;
-	font-size: 200%;
-}
-
-#info #mouse, #info #touch {
-	background-color: LightGrey;
-	font-weight: bold;
-	width: 12%;
-}
-
-#info TD {
-	background-color: GhostWhite;
-}
-
-.active {
-	background-color: Salmon !important;
+	background-color: #D2F0F9;
 }
 
 .area {
@@ -39,14 +13,19 @@
 	width: 32%;
 	height: 33%;
 	margin: 0.4% 0.2% 0%;
-	border-radius: 8px;
-	background-color: Khaki;
+	border-radius: 3px;
+	background-color: GhostWhite;
+	border: 1px solid blue;
 }
 
-.area LEGEND {
-	background-color: DarkKhaki;
-	border-radius: 4px;
-	padding: 2px 5px;
-	color: Brown;
-	font: bold 100% sans-serif;
+.mousedown {
+	background-color: YellowGreen;
+}
+
+.mousemove {
+	background-color: Gold;
+}
+
+.mouseup {
+	background-color: Salmon;
 }
